binaryen/src/Bindings/Binaryen/Raw.hs


foreign import ccall unsafe "BinaryenExpressionGetType" c_BinaryenExpressionGetType
  :: BinaryenExpressionRef -> IO BinaryenType

foreign import ccall unsafe "BinaryenExpressionPrint" c_BinaryenExpressionPrint
  :: BinaryenExpressionRef -> IO ()

foreign import ccall unsafe "BinaryenBlockGetName" c_BinaryenBlockGetName
  :: BinaryenExpressionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenBlockGetNumChildren" c_BinaryenBlockGetNumChildren
  :: BinaryenExpressionRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenBlockGetChild" c_BinaryenBlockGetChild
  :: BinaryenExpressionRef -> BinaryenIndex -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenIfGetCondition" c_BinaryenIfGetCondition
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenIfGetIfTrue" c_BinaryenIfGetIfTrue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenIfGetIfFalse" c_BinaryenIfGetIfFalse
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenLoopGetName" c_BinaryenLoopGetName
  :: BinaryenExpressionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenLoopGetBody" c_BinaryenLoopGetBody
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenBreakGetName" c_BinaryenBreakGetName
  :: BinaryenExpressionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenBreakGetCondition" c_BinaryenBreakGetCondition
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenBreakGetValue" c_BinaryenBreakGetValue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSwitchGetNumNames" c_BinaryenSwitchGetNumNames
  :: BinaryenExpressionRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenSwitchGetName" c_BinaryenSwitchGetName
  :: BinaryenExpressionRef -> BinaryenIndex -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenSwitchGetDefaultName" c_BinaryenSwitchGetDefaultName
  :: BinaryenExpressionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenSwitchGetCondition" c_BinaryenSwitchGetCondition
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSwitchGetValue" c_BinaryenSwitchGetValue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenCallGetTarget" c_BinaryenCallGetTarget
  :: BinaryenExpressionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenCallGetNumOperands" c_BinaryenCallGetNumOperands
  :: BinaryenExpressionRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenCallGetOperand" c_BinaryenCallGetOperand
  :: BinaryenExpressionRef -> BinaryenIndex -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenCallIndirectGetTarget" c_BinaryenCallIndirectGetTarget
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenCallIndirectGetNumOperands" c_BinaryenCallIndirectGetNumOperands
  :: BinaryenExpressionRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenCallIndirectGetOperand" c_BinaryenCallIndirectGetOperand
  :: BinaryenExpressionRef -> BinaryenIndex -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenGetLocalGetIndex" c_BinaryenGetLocalGetIndex
  :: BinaryenExpressionRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenSetLocalIsTee" c_BinaryenSetLocalIsTee
  :: BinaryenExpressionRef -> IO CInt

foreign import ccall unsafe "BinaryenSetLocalGetIndex" c_BinaryenSetLocalGetIndex
  :: BinaryenExpressionRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenSetLocalGetValue" c_BinaryenSetLocalGetValue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenGetGlobalGetName" c_BinaryenGetGlobalGetName
  :: BinaryenExpressionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenSetGlobalGetName" c_BinaryenSetGlobalGetName
  :: BinaryenExpressionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenSetGlobalGetValue" c_BinaryenSetGlobalGetValue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenHostGetOp" c_BinaryenHostGetOp
  :: BinaryenExpressionRef -> IO BinaryenOp

foreign import ccall unsafe "BinaryenHostGetNameOperand" c_BinaryenHostGetNameOperand
  :: BinaryenExpressionRef -> IO (Ptr CChar)

foreign import ccall unsafe "BinaryenHostGetNumOperands" c_BinaryenHostGetNumOperands
  :: BinaryenExpressionRef -> IO BinaryenIndex

foreign import ccall unsafe "BinaryenHostGetOperand" c_BinaryenHostGetOperand
  :: BinaryenExpressionRef -> BinaryenIndex -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenLoadIsAtomic" c_BinaryenLoadIsAtomic
  :: BinaryenExpressionRef -> IO CInt

foreign import ccall unsafe "BinaryenLoadIsSigned" c_BinaryenLoadIsSigned
  :: BinaryenExpressionRef -> IO CInt

foreign import ccall unsafe "BinaryenLoadGetOffset" c_BinaryenLoadGetOffset
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenLoadGetBytes" c_BinaryenLoadGetBytes
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenLoadGetAlign" c_BinaryenLoadGetAlign
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenLoadGetPtr" c_BinaryenLoadGetPtr
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenStoreIsAtomic" c_BinaryenStoreIsAtomic
  :: BinaryenExpressionRef -> IO CInt

foreign import ccall unsafe "BinaryenStoreGetBytes" c_BinaryenStoreGetBytes
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenStoreGetOffset" c_BinaryenStoreGetOffset
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenStoreGetAlign" c_BinaryenStoreGetAlign
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenStoreGetPtr" c_BinaryenStoreGetPtr
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenStoreGetValue" c_BinaryenStoreGetValue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenConstGetValueI32" c_BinaryenConstGetValueI32
  :: BinaryenExpressionRef -> IO Int32

foreign import ccall unsafe "BinaryenConstGetValueI64" c_BinaryenConstGetValueI64
  :: BinaryenExpressionRef -> IO Int64

foreign import ccall unsafe "BinaryenConstGetValueI64Low" c_BinaryenConstGetValueI64Low
  :: BinaryenExpressionRef -> IO Int32

foreign import ccall unsafe "BinaryenConstGetValueI64High" c_BinaryenConstGetValueI64High
  :: BinaryenExpressionRef -> IO Int32

foreign import ccall unsafe "BinaryenConstGetValueF32" c_BinaryenConstGetValueF32
  :: BinaryenExpressionRef -> IO CFloat

foreign import ccall unsafe "BinaryenConstGetValueF64" c_BinaryenConstGetValueF64
  :: BinaryenExpressionRef -> IO CDouble

foreign import ccall unsafe "BinaryenUnaryGetOp" c_BinaryenUnaryGetOp
  :: BinaryenExpressionRef -> IO BinaryenOp

foreign import ccall unsafe "BinaryenUnaryGetValue" c_BinaryenUnaryGetValue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenBinaryGetOp" c_BinaryenBinaryGetOp
  :: BinaryenExpressionRef -> IO BinaryenOp

foreign import ccall unsafe "BinaryenBinaryGetLeft" c_BinaryenBinaryGetLeft
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenBinaryGetRight" c_BinaryenBinaryGetRight
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSelectGetIfTrue" c_BinaryenSelectGetIfTrue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSelectGetIfFalse" c_BinaryenSelectGetIfFalse
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenSelectGetCondition" c_BinaryenSelectGetCondition
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenDropGetValue" c_BinaryenDropGetValue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenReturnGetValue" c_BinaryenReturnGetValue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicRMWGetOp" c_BinaryenAtomicRMWGetOp
  :: BinaryenExpressionRef -> IO BinaryenOp

foreign import ccall unsafe "BinaryenAtomicRMWGetBytes" c_BinaryenAtomicRMWGetBytes
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenAtomicRMWGetOffset" c_BinaryenAtomicRMWGetOffset
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenAtomicRMWGetPtr" c_BinaryenAtomicRMWGetPtr
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicRMWGetValue" c_BinaryenAtomicRMWGetValue
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetBytes" c_BinaryenAtomicCmpxchgGetBytes
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetOffset" c_BinaryenAtomicCmpxchgGetOffset
  :: BinaryenExpressionRef -> IO Word32

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetPtr" c_BinaryenAtomicCmpxchgGetPtr
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetExpected" c_BinaryenAtomicCmpxchgGetExpected
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicCmpxchgGetReplacement" c_BinaryenAtomicCmpxchgGetReplacement
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicWaitGetPtr" c_BinaryenAtomicWaitGetPtr
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicWaitGetExpected" c_BinaryenAtomicWaitGetExpected
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicWaitGetTimeout" c_BinaryenAtomicWaitGetTimeout
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicWaitGetExpectedType" c_BinaryenAtomicWaitGetExpectedType
  :: BinaryenExpressionRef -> IO BinaryenType

foreign import ccall unsafe "BinaryenAtomicWakeGetPtr" c_BinaryenAtomicWakeGetPtr
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

foreign import ccall unsafe "BinaryenAtomicWakeGetWakeCount" c_BinaryenAtomicWakeGetWakeCount
  :: BinaryenExpressionRef -> IO BinaryenExpressionRef

data BinaryenFunction

type BinaryenFunctionRef = Ptr BinaryenFunction

foreign import ccall unsafe "BinaryenAddFunction" c_BinaryenAddFunction
  :: BinaryenModuleRef ->
  Ptr CChar ->
    BinaryenFunctionTypeRef ->
      Ptr BinaryenType ->
        BinaryenIndex -> BinaryenExpressionRef -> IO BinaryenFunctionRef

foreign import ccall unsafe "BinaryenGetFunction" c_BinaryenGetFunction
  :: BinaryenModuleRef -> Ptr CChar -> IO BinaryenFunctionRef

foreign import ccall unsafe "BinaryenRemoveFunction" c_BinaryenRemoveFunction
  :: BinaryenModuleRef -> Ptr CChar -> IO ()

foreign import ccall unsafe "BinaryenAddFunctionImport" c_BinaryenAddFunctionImport
  :: BinaryenModuleRef ->
  Ptr CChar ->
    Ptr CChar -> Ptr CChar -> BinaryenFunctionTypeRef -> IO ()

foreign import ccall unsafe "BinaryenAddTableImport" c_BinaryenAddTableImport
  :: BinaryenModuleRef -> Ptr CChar -> Ptr CChar -> Ptr CChar -> IO ()

foreign import ccall unsafe "BinaryenAddMemoryImport" c_BinaryenAddMemoryImport
  :: BinaryenModuleRef ->
  Ptr CChar -> Ptr CChar -> Ptr CChar -> Ptr Word8 -> IO ()

foreign import ccall unsafe "BinaryenAddGlobalImport" c_BinaryenAddGlobalImport
  :: BinaryenModuleRef ->
  Ptr CChar -> Ptr CChar -> Ptr CChar -> BinaryenType -> IO ()

foreign import ccall unsafe "BinaryenRemoveImport" c_BinaryenRemoveImport
  :: BinaryenModuleRef -> Ptr CChar -> IO ()

data BinaryenExport

type BinaryenExportRef = Ptr BinaryenExport
